// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responses should translate to multiple responses 1`] = `
Array [
  Object {
    "code": "r1",
    "contents": Array [
      Object {
        "examples": Array [
          Object {
            "id": "#/responses/r1",
            "key": "application/json",
            "value": Object {},
          },
        ],
        "id": "#/responses/r1",
        "mediaType": "application/json",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1",
        },
      },
      Object {
        "examples": Array [],
        "id": "#/responses/r1",
        "mediaType": "application/xml",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1",
        },
      },
    ],
    "description": "d1",
    "headers": Array [],
    "id": "#/responses/r1",
  },
  Object {
    "code": "r2",
    "contents": Array [
      Object {
        "examples": Array [],
        "id": "#/responses/r1/responses/r2",
        "mediaType": "application/json",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1/responses/r2",
        },
      },
      Object {
        "examples": Array [
          Object {
            "id": "#/responses/r1/responses/r2",
            "key": "application/xml",
            "value": Object {},
          },
        ],
        "id": "#/responses/r1/responses/r2",
        "mediaType": "application/xml",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1/responses/r2",
        },
      },
    ],
    "description": "d2",
    "headers": Array [],
    "id": "#/responses/r1/responses/r2",
  },
]
`;

exports[`responses should translate to response w/o examples 1`] = `
Array [
  Object {
    "code": "r1",
    "contents": Array [
      Object {
        "examples": Array [],
        "id": "#/responses/r1",
        "mediaType": "application/json",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1",
        },
      },
      Object {
        "examples": Array [],
        "id": "#/responses/r1",
        "mediaType": "application/xml",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1",
        },
      },
    ],
    "description": "d1",
    "headers": Array [],
    "id": "#/responses/r1",
  },
]
`;

exports[`responses should translate to response w/o headers 1`] = `
Array [
  Object {
    "code": "r1",
    "contents": Array [
      Object {
        "examples": Array [],
        "id": "#/responses/r1",
        "mediaType": "application/json",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1",
        },
      },
      Object {
        "examples": Array [
          Object {
            "id": "#/responses/r1",
            "key": "application/xml",
            "value": Object {},
          },
        ],
        "id": "#/responses/r1",
        "mediaType": "application/xml",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "x-stoplight-id": "#/responses/r1",
        },
      },
    ],
    "description": "d1",
    "headers": Array [],
    "id": "#/responses/r1",
  },
]
`;
